crates/autopilot/src/tests/snapshots/autopilot__tests__dashboard_snapshots__dashboard_empty_state.snap
---
source: crates/autopilot/src/tests/dashboard_snapshots.rs
expression: html
---
<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>Autopilot Metrics Dashboard</title><style>
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

:root {
    --bg-primary: #1a1b26;
    --bg-secondary: #24283b;
    --bg-tertiary: #414868;
    --text-primary: #c0caf5;
    --text-secondary: #a9b1d6;
    --accent: #7aa2f7;
    --green: #9ece6a;
    --red: #f7768e;
    --orange: #ff9e64;
    --yellow: #e0af68;
    --border: #414868;
}

body {
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
    background: var(--bg-primary);
    color: var(--text-primary);
    line-height: 1.6;
}

header {
    background: var(--bg-secondary);
    padding: 2rem;
    border-bottom: 2px solid var(--accent);
}

h1 {
    font-size: 2rem;
    margin-bottom: 0.5rem;
}

.subtitle {
    color: var(--text-secondary);
    font-size: 0.9rem;
}

.header-nav {
    margin-top: 1rem;
    display: flex;
    gap: 1rem;
}

.header-nav a {
    color: var(--text-secondary);
    text-decoration: none;
    padding: 0.5rem 1rem;
    transition: all 0.2s;
}

.header-nav a:hover {
    background: var(--bg-tertiary);
    color: var(--text-primary);
}

.header-nav a.active {
    background: var(--accent);
    color: var(--bg-primary);
    font-weight: 600;
}

main {
    max-width: 1400px;
    margin: 0 auto;
    padding: 2rem;
}

.summary-card {
    background: var(--bg-secondary);
    padding: 2rem;
    margin-bottom: 2rem;
}

.stats-grid {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
    gap: 1.5rem;
    margin-top: 1rem;
}

.stat {
    display: flex;
    flex-direction: column;
    gap: 0.5rem;
}

.stat-label {
    color: var(--text-secondary);
    font-size: 0.875rem;
    text-transform: uppercase;
    letter-spacing: 0.05em;
}

.stat-value {
    font-size: 1.75rem;
    font-weight: 600;
    color: var(--accent);
}

.stat-unit {
    color: var(--text-secondary);
    font-size: 0.75rem;
    text-transform: uppercase;
    letter-spacing: 0.05em;
    margin-top: 0.25rem;
}

.charts-section {
    margin-bottom: 2rem;
}

.charts-section h2 {
    margin-bottom: 1.5rem;
}

.charts-grid {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
    gap: 2rem;
}

.chart-container {
    background: var(--bg-secondary);
    padding: 1.5rem;
}

.chart-container h3 {
    color: var(--text-secondary);
    font-size: 0.875rem;
    text-transform: uppercase;
    letter-spacing: 0.05em;
    margin-bottom: 1rem;
}

.chart-container canvas {
    max-height: 300px;
}

.sessions-section {
    margin-top: 2rem;
}

.sessions-table {
    width: 100%;
    border-collapse: collapse;
    background: var(--bg-secondary);
    margin-top: 1rem;
}

.sessions-table th {
    background: var(--bg-tertiary);
    padding: 1rem;
    text-align: left;
    font-weight: 600;
    text-transform: uppercase;
    font-size: 0.875rem;
    letter-spacing: 0.05em;
}

.sessions-table td {
    padding: 1rem;
    border-top: 1px solid var(--border);
}

.sessions-table tr:hover {
    background: var(--bg-tertiary);
}

.sessions-table a {
    color: var(--accent);
    text-decoration: none;
}

.sessions-table a:hover {
    text-decoration: underline;
}

.status-completed {
    border-left: 3px solid var(--green);
}

.status-crashed {
    border-left: 3px solid var(--red);
}

.status-budget {
    border-left: 3px solid var(--orange);
}

.status-maxturns {
    border-left: 3px solid var(--yellow);
}

.status-running {
    border-left: 3px solid var(--accent);
}

.placeholder {
    color: var(--text-secondary);
    font-style: italic;
    padding: 2rem;
    text-align: center;
}

.session-details {
    background: var(--bg-secondary);
    padding: 2rem;
}

.session-details dl {
    display: grid;
    grid-template-columns: 200px 1fr;
    gap: 1rem;
    margin: 1rem 0;
}

.session-details dt {
    font-weight: 600;
    color: var(--text-secondary);
}

.session-details dd {
    color: var(--text-primary);
}

.session-details pre {
    background: var(--bg-primary);
    padding: 1rem;
    overflow-x: auto;
    margin-top: 0.5rem;
}

footer {
    text-align: center;
    padding: 2rem;
    color: var(--text-secondary);
    font-size: 0.875rem;
}

footer a {
    color: var(--accent);
    text-decoration: none;
}

footer a:hover {
    text-decoration: underline;
}
</style><script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js"></script><script>
// Chart.js configuration with dark theme
const chartColors = {
    primary: '#7aa2f7',
    green: '#9ece6a',
    red: '#f7768e',
    orange: '#ff9e64',
    yellow: '#e0af68',
    bg: '#1a1b26',
    gridColor: '#414868',
    textColor: '#c0caf5',
};

const chartOptions = {
    responsive: true,
    maintainAspectRatio: true,
    plugins: {
        legend: {
            display: false,
        },
    },
    scales: {
        x: {
            grid: {
                color: chartColors.gridColor,
            },
            ticks: {
                color: chartColors.textColor,
            },
        },
        y: {
            grid: {
                color: chartColors.gridColor,
            },
            ticks: {
                color: chartColors.textColor,
            },
        },
    },
};

// Load charts when page loads
document.addEventListener('DOMContentLoaded', async () => {
    await loadAllCharts();
    setupWebSocket();

    // Refresh charts every 60 seconds
    setInterval(loadAllCharts, 60000);
});

async function loadAllCharts() {
    await Promise.all([
        loadErrorRateChart(),
        loadCompletionRateChart(),
        loadCostChart(),
        loadTokensChart(),
    ]);
}

async function loadErrorRateChart() {
    try {
        const response = await fetch('/api/trends?dimension=tool_error_rate&hours=168&granularity=day');
        const data = await response.json();

        const ctx = document.getElementById('errorRateChart').getContext('2d');

        // Destroy existing chart if it exists
        if (window.errorRateChart) {
            window.errorRateChart.destroy();
        }

        window.errorRateChart = new Chart(ctx, {
            type: 'line',
            data: {
                labels: data.data.map(d => d.date),
                datasets: [{
                    label: 'Error Rate (%)',
                    data: data.data.map(d => d.value),
                    borderColor: chartColors.red,
                    backgroundColor: chartColors.red + '20',
                    fill: true,
                    tension: 0.3,
                }],
            },
            options: {
                ...chartOptions,
                scales: {
                    ...chartOptions.scales,
                    y: {
                        ...chartOptions.scales.y,
                        min: 0,
                        max: 100,
                    },
                },
            },
        });
    } catch (error) {
        console.error('Failed to load error rate chart:', error);
    }
}

async function loadCompletionRateChart() {
    try {
        const response = await fetch('/api/trends?dimension=completion_rate&hours=168&granularity=day');
        const data = await response.json();

        const ctx = document.getElementById('completionRateChart').getContext('2d');

        if (window.completionRateChart) {
            window.completionRateChart.destroy();
        }

        window.completionRateChart = new Chart(ctx, {
            type: 'line',
            data: {
                labels: data.data.map(d => d.date),
                datasets: [{
                    label: 'Completion Rate (%)',
                    data: data.data.map(d => d.value),
                    borderColor: chartColors.green,
                    backgroundColor: chartColors.green + '20',
                    fill: true,
                    tension: 0.3,
                }],
            },
            options: {
                ...chartOptions,
                scales: {
                    ...chartOptions.scales,
                    y: {
                        ...chartOptions.scales.y,
                        min: 0,
                        max: 100,
                    },
                },
            },
        });
    } catch (error) {
        console.error('Failed to load completion rate chart:', error);
    }
}

async function loadCostChart() {
    try {
        const response = await fetch('/api/trends?dimension=avg_cost&hours=168&granularity=day');
        const data = await response.json();

        const ctx = document.getElementById('costChart').getContext('2d');

        if (window.costChart) {
            window.costChart.destroy();
        }

        window.costChart = new Chart(ctx, {
            type: 'bar',
            data: {
                labels: data.data.map(d => d.date),
                datasets: [{
                    label: 'Avg Cost ($)',
                    data: data.data.map(d => d.value),
                    backgroundColor: chartColors.orange,
                    borderColor: chartColors.orange,
                    borderWidth: 1,
                }],
            },
            options: chartOptions,
        });
    } catch (error) {
        console.error('Failed to load cost chart:', error);
    }
}

async function loadTokensChart() {
    try {
        const response = await fetch('/api/trends?dimension=avg_tokens&hours=168&granularity=day');
        const data = await response.json();

        const ctx = document.getElementById('tokensChart').getContext('2d');

        if (window.tokensChart) {
            window.tokensChart.destroy();
        }

        window.tokensChart = new Chart(ctx, {
            type: 'line',
            data: {
                labels: data.data.map(d => d.date),
                datasets: [{
                    label: 'Avg Tokens',
                    data: data.data.map(d => d.value),
                    borderColor: chartColors.primary,
                    backgroundColor: chartColors.primary + '20',
                    fill: true,
                    tension: 0.3,
                }],
            },
            options: chartOptions,
        });
    } catch (error) {
        console.error('Failed to load tokens chart:', error);
    }
}

function setupWebSocket() {
    const protocol = window.location.protocol === 'https:' ? 'wss:' : 'ws:';
    const ws = new WebSocket(`${protocol}//${window.location.host}/ws/metrics`);

    ws.onopen = () => {
        console.log('✅ WebSocket connected for real-time metrics');
        // Show connection indicator
        showConnectionStatus('connected');
    };

    ws.onmessage = (event) => {
        const data = JSON.parse(event.data);
        console.log('📊 Received metrics update:', data);

        if (data.update_type === 'connected') {
            console.log('🔌 ' + data.message);
            return;
        }

        // Reload charts and session list on any metrics update
        if (data.update_type === 'session_updated' ||
            data.update_type === 'session_created' ||
            data.update_type === 'metrics_update') {
            loadAllCharts();

            // If we're on the main page, reload the session list too
            if (window.location.pathname === '/') {
                setTimeout(() => {
                    window.location.reload();
                }, 500);
            }
        }
    };

    ws.onerror = (error) => {
        console.error('❌ WebSocket error:', error);
        showConnectionStatus('error');
    };

    ws.onclose = () => {
        console.log('🔌 WebSocket disconnected, reconnecting in 5s...');
        showConnectionStatus('disconnected');
        setTimeout(setupWebSocket, 5000);
    };
}

function showConnectionStatus(status) {
    // You could add a UI indicator here
    // For now just log to console
    const statusEmoji = {
        'connected': '🟢',
        'disconnected': '🔴',
        'error': '🟠'
    };
    console.log(`${statusEmoji[status] || '⚪'} Connection status: ${status}`);
}
</script></head><body><header><h1>⚡ Autopilot Metrics Dashboard</h1><p class="subtitle">Continual Constant Improvement (d-004)</p><nav class="header-nav"><a href="/" class="active">Dashboard</a><a href="/sessions">All Sessions</a><a href="/export/sessions.json">Export JSON</a><a href="/export/sessions.csv">Export CSV</a></nav></header><main><div class="summary-card"><h2>Summary Statistics</h2><div class="stats-grid"><div class="stat"><span class="stat-label">Total Sessions</span><span class="stat-value">0</span></div><div class="stat"><span class="stat-label">Issues Completed</span><span class="stat-value">0</span></div><div class="stat"><span class="stat-label">Total Cost</span><span class="stat-value">$0.00</span></div><div class="stat"><span class="stat-label">Avg Duration</span><span class="stat-value">0s</span></div><div class="stat"><span class="stat-label">Avg Tokens</span><span class="stat-value">0</span></div><div class="stat"><span class="stat-label">Completion Rate</span><span class="stat-value">0.0%</span></div></div></div><div class="summary-card"><h2>APM (Actions Per Minute)</h2><p class="subtitle" style="margin-bottom: 1rem; color: #666;">Agent velocity metrics • Autopilot vs Claude Code</p><div class="stats-grid"><div class="stat"><span class="stat-label">Autopilot (avg)</span><span class="stat-value" style="color: #666;">N/A</span><span class="stat-unit"></span></div><div class="stat"><span class="stat-label">Claude Code (avg)</span><span class="stat-value" style="color: #666;">N/A</span><span class="stat-unit"></span></div><div class="stat"><span class="stat-label">Efficiency Ratio</span><span class="stat-value" style="color: #666;">N/A</span><span class="stat-unit"></span></div><div class="stat"><span class="stat-label">Latest Session</span><span class="stat-value" style="color: #666;">N/A</span><span class="stat-unit"></span></div><div class="stat"><span class="stat-label">Performance Tier</span><span class="stat-value" style="color: #666;">N/A</span><span class="stat-unit"></span></div><div class="stat"><span class="stat-label">Total Actions</span><span class="stat-value">0</span><span class="stat-unit">tracked</span></div></div><p class="note" style="margin-top: 1rem; font-size: 0.85rem; color: #666; font-style: italic;">Note: No session data available yet. Run autopilot to collect APM metrics.</p></div><div class="charts-section"><h2>Metrics Trends</h2><div class="charts-grid"><div class="chart-container"><h3>Tool Error Rate (Last 7 Days)</h3><canvas id="errorRateChart"></canvas></div><div class="chart-container"><h3>Completion Rate (Last 7 Days)</h3><canvas id="completionRateChart"></canvas></div><div class="chart-container"><h3>Average Cost per Session (Last 7 Days)</h3><canvas id="costChart"></canvas></div><div class="chart-container"><h3>Token Usage Trend (Last 7 Days)</h3><canvas id="tokensChart"></canvas></div></div></div><div class="sessions-section"><h2>Recent Sessions (0)</h2><p class="placeholder">No sessions recorded yet</p></div></main><footer><p>OpenAgents Autopilot • Real-time metrics powered by WebSocket</p></footer></body></html>
